fixed image attribution color for legibility

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -81,7 +81,8 @@ figcaption h3 {
     font-size: 1rem;
     margin: 0;
     padding: 0;
-    color: hsl(0, 50%, 69%);
+    color: hsl(0, 0%, 100%);
+    background-color: hsla(0, 0%, 0%, 0.5);
 }
 
 .att-link a {
